# cli

./: .babelrc  .dprint.json  .editorconfig  .env.example  .eslintignore  .eslintrc  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.json  .travis.yml  .vale.ini  12345  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MOCK_API_IMPROVEMENTS.md  README.md  STYLEGUIDE.md  appveyor.yml  azure-pipelines-template.yml  azure-pipelines.yml  certconf  codecov.yml  commitlint.config.js  context7.json  convert.sh  e2e.config.cjs  e2e.config.mjs  eslint.config.js  eslint_temporary_suppressions.js  gen-docs.js  index  jest.config.mjs  layout.html  migrate.mjs  (+19 more)
.circleci/: README.md  config.yml  rollback.yml
.claude/: settings.local.json
.github/: .kodiak.toml  CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  pull_request_template.md  test-matrix.yml
__mocks__/: fs.js  write-file-atomic.js
docs/: README.md  _app.js  _layout.js  addons.md  contributing.md  debugging.md  deploy.md  forms.md  functions-dev.md  functions.md  getting-started.md  help.md  index.html  index.md  init.md  link.md  login.md  logout.md  netlify-dev.md  open.md  package.json  sites.md  status.md  unlink.md  vscode.md  whoami.md
functions-templates/rust/hello-world/: Cargo.toml
functions-templates/rust/hello-world/src/: main.rs
src/functions-templates/rust/hello-world/: .netlify-function-template.cjs  .netlify-function-template.mjs  .netlify-function-template.mts  Cargo.toml
src/functions-templates/rust/hello-world/src/: main.rs
(+3380 files in other folders)
