[package]
edition = "2018"
name = "{{name}}"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.4.0"
http = "0.2.5"
lambda_runtime = "0.3.0"
log = "0.4.14"
simple_logger = "1.11.0"
tokio = "1.6.1"
